# Scrollmore

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  input
src/: more.cpp  scroll.cpp  scroller.cpp
